[package]
name = "openbook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.18.1"
solana-program = "1.10.41"
solana-client = "1.18.1"
anyhow = "1.0.79"
serde = "1.0.150"
itertools = "0.10.5"
without-alloc = "0.2.2"
num_enum = "0.5.7"
static_assertions = "1.1.0"
bincode = "1.3.3"
enumflags2 = "0.6.4"
field-offset = "0.3.4"
thiserror = "1.0.37"
safe-transmute = "0.11.2"
arbitrary = { version = "0.4.7", features = ["derive"], optional = true }
num-traits = "0.2.15"
arrayref = "0.3.6"
bytemuck = "1.12.3"
byteorder = "1.4.3"
default-env = "0.1.1"
num-derive = "0.4"
tokio = { version = "1", features = ["rt", "net"] }

[lib]
crate-type = ["cdylib", "lib"]
